Result Ranking TimeLog

--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -162,28 +162,13 @@
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div>
                             </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Access to debit account</div>
-                                <div class="col-2 body-title text-right">100</div>
+                            <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries.result;let i = index">
+                                <div class="col-10 body-title pr-3">{{top.query}}</div>
+                                <div class="col-2 body-title text-right">{{top.count}}</div>
                             </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">30</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Password change of Saving account</div>
-                                <div class="col-2 body-title text-right">20</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">15</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Changing of Net banking Pin</div>
-                                <div class="col-2 body-title text-right">2</div>
-                            </div>
+                            
                         </div>
-                        <app-pagination  [totalRecord]='totalRecord' [limitpage]='limitpage' [recordEnd]="recordEnd"
+                        <app-pagination  [totalRecord]='tsqtotalRecord' [limitpage]='tsqlimitpage' [recordEnd]="tsqrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
                     </div>
                 </div>
@@ -192,31 +177,17 @@
                         <div class="title-card">Top Search Queries with No Result</div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-10 header-title">Task Name</div>
-                                <div class="col-2 header-title text-right">Count</div>
+                                <div class="col-10 header-title">Searched Intent</div>
+                                <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
+                                    Count</div>
                             </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Access to debit account</div>
-                                <div class="col-2 body-title text-right">100</div>
+                            <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults.response;let i = index">
+                                <div class="col-10 header-title">{{top.query}}</div>
+                                <div class="col-2 header-title text-right">{{top.count}}</div>
                             </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">30</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Password change of Saving account</div>
-                                <div class="col-2 body-title text-right">20</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">15</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Changing of Net banking Pin</div>
-                                <div class="col-2 body-title text-right">2</div>
-                            </div>
+                            
                         </div>
-                        <app-pagination  [totalRecord]='totalRecord' [limitpage]='limitpage' [recordEnd]="recordEnd"
+                        <app-pagination  [totalRecord]='tsqNoRtotalRecord' [limitpage]='tsqNoRlimitpage' [recordEnd]="tsqNoRrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
                     </div>
                 </div>
@@ -226,7 +197,7 @@
                     <div class="full-card">
                         <div class="info-icon" placement="top-right" ngbTooltip="Use key board shortcuts"
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
-                        <div class="title-card">Top Search Queries</div>
+                        <div class="title-card">Top Search Results</div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
                                 <div class="col-10 header-title">Searched Intent</div>
@@ -336,28 +307,13 @@
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div>
                             </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Access to debit account</div>
-                                <div class="col-2 body-title text-right">100</div>
+                            <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries.result;let i = index">
+                                <div class="col-10 body-title pr-3">{{top.query}}</div>
+                                <div class="col-2 body-title text-right">{{top.count}}</div>
                             </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">30</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Password change of Saving account</div>
-                                <div class="col-2 body-title text-right">20</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">15</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Changing of Net banking Pin</div>
-                                <div class="col-2 body-title text-right">2</div>
-                            </div>
+                            
                         </div>
-                        <app-pagination  [totalRecord]='totalRecord' [limitpage]='limitpage' [recordEnd]="recordEnd"
+                        <app-pagination  [totalRecord]='tsqPtotalRecord' [limitpage]='tsqPlimitpage' [recordEnd]="tsqPrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
                     </div>
                 </div>
@@ -367,35 +323,31 @@
                     <div class="full-card">
                         <div class="info-icon" placement="top-right" ngbTooltip="Use key board shortcuts"
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
-                        <div class="title-card">Top Search Queries</div>
+                        <div class="title-card">Top Search Queries with No Results</div>
                         <div class="table-content-data">
-                            <div class="table_header row m-0">
-                                <div class="col-10 header-title">Searched Intent</div>
-                                <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
-                                    Count</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Access to debit account</div>
-                                <div class="col-2 body-title text-right">100</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">30</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Password change of Saving account</div>
-                                <div class="col-2 body-title text-right">20</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">15</div>
-                            </div>
-                            <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Changing of Net banking Pin</div>
-                                <div class="col-2 body-title text-right">2</div>
+                            <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults.response;let i = index">
+                                <div class="col-10 header-title">{{top.query}}</div>
+                                <div class="col-2 header-title text-right">{{top.count}}</div>
                             </div>
                         </div>
-                        <app-pagination  [totalRecord]='totalRecord' [limitpage]='limitpage' [recordEnd]="recordEnd"
+                        <app-pagination  [totalRecord]='tsqNoRPtotalRecord' [limitpage]='tsqNoRPlimitpage' [recordEnd]="tsqNoRPrecordEnd"
+                        [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
+                    </div>
+                </div>
+            </div>
+            <div class="data-information-content col-12 m-0 row split-tables">
+                <div class="col-12 box-content">
+                    <div class="full-card">
+                        <div class="info-icon" placement="top-right" ngbTooltip="Use key board shortcuts"
+                            [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
+                        <div class="title-card">Top Search Queries with No Clicks</div>
+                        <div class="table-content-data">
+                            <div class="table_header row m-0" *ngFor="let top of queriesWithNoClicks.result;let i = index">
+                                <div class="col-10 header-title">{{top.query}}</div>
+                                <div class="col-2 header-title text-right">{{top.count}}</div>
+                            </div>
+                        </div>
+                        <app-pagination  [totalRecord]='tsqNoRPtotalRecord' [limitpage]='tsqNoRPlimitpage' [recordEnd]="tsqNoRPrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
                     </div>
                 </div>
