Result Ranking TimeLog

--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -252,21 +252,21 @@
                     <div class="full-card">
                         <div class="legends-info">
                             <div class="content">
-                                <div class="title">Total Searches <span class="toatlsearches"></span></div>
+                                <div class="title">Total Users <span class="toatlsearches"></span></div>
                                 <div class="count-data">
                                     <span class="count"><img src="assets/icons/arrow_green.svg">1140</span>
                                     <span class="percentage">+12%</span>
                                 </div>
                             </div>
                             <div class="content">
-                                <div class="title">Searches with Results <span class="withresults"></span></div>
+                                <div class="title">New Users <span class="withresults"></span></div>
                                 <div class="count-data">
                                     <span class="count"><img src="assets/icons/arrow_green.svg">1140</span>
                                     <span class="percentage">+12%</span>
                                 </div>
                             </div>
                             <div class="content">
-                                <div class="title">Searches with Clicks <span class="clicks"></span></div>
+                                <div class="title">Repeat Users <span class="clicks"></span></div>
                                 <div class="count-data">
                                     <span class="count"><img src="assets/icons/arrow_green.svg">1140</span>
                                     <span class="percentage">+12%</span>
