--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -54,15 +54,15 @@
                                             <div   class="card_link collapsed">      
                                                 <div class="d-flex align-items-center">
                                                     <div class="kr-sg-checkbox col-1" (click)="$event.stopImmediatePropagation();">
-                                                        <input  [attr.id]="i"  class="checkbox-custom selectEachfaqInput" type="checkbox" autocomplete="off"  (click) ="clickCustomizeRecord(list)">
-                                                        <label [attr.for]="i" class="checkbox-custom-label"></label>
+                                                        <input  [attr.id]="i"  class="checkbox-custom selectEachfaqInput" type="checkbox"  autocomplete="off"  (click) ="clickCustomizeRecord(list)">
+                                                        <label [attr.for]="i" class="checkbox-custom-label" ></label>
                                                     </div>
                                                     <div class="title-desc-sec col-10">
                                                         <div class="title">{{list.searchQuery}}</div>
                                                         <div class="desc">{{list.numberOfCustomisations}} customisations</div>
                                                     </div>
                                                     <div class="title-desc-sec col-1">
-                                                        <div class="restore-icon" (click) = "restore(list)">Res</div>
+                                                        <div class="restore-icon" (click) = "restore(list)" ><img class="action-icon" src="assets/icons/restore.svg"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -95,12 +95,12 @@
                                     </div>
                                     <div class="col-4 p-0 lef-info">
                                         <div class="approved_title">LAST CHANGES</div>
-                                        <div class="approved_date"><span class="time">31 Nov,2020</span></div>
+                                        <div class="approved_date"><span class="time">26 Oct,2020</span></div>
                                     </div>
                                     <div class="col-4 p-0 actions-sec">
                                         <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
                                             <div class="dropdown dropdown-open">                                        
-                                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img class="cursor" src="assets/icons/comment.svg"></button>                                            
+                                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img class="cursor" src="assets/icons/play.svg"></button>                                            
                                                 <ul class="dropdown-menu content-menu comments_header_dropdown_content d-none" ngbDropdownMenu>
                                                     
                                                 </ul>
@@ -115,7 +115,7 @@
                                             </div>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-end">
-                                            <button class="kr-sg-button-secondary btn_lg text-danger" (click) = "restore(selectedRecord)"> Restore</button>
+                                            <button class="kr-sg-button-secondary btn_lg text-danger pl-2 pr-2" (click) = "restore(selectedRecord)"> <span><img src="assets/icons/restore.svg"></span> Restore </button>
                                         </div>
                                     </div>
                                     <!-- <perfect-scrollbar class="perfect-scroll-result-rank">
