--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -162,11 +162,12 @@
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div>
                             </div>
-                            <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries.result;let i = index">
-                                <div class="col-10 body-title pr-3">{{top.query}}</div>
-                                <div class="col-2 body-title text-right">{{top.count}}</div>
+                            <div *ngIf="mostSearchedQuries">
+                                <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries.result;let i = index">
+                                    <div class="col-10 body-title pr-3">{{top.query}}</div>
+                                    <div class="col-2 body-title text-right">{{top.count}}</div>
+                                </div>
                             </div>
-                            
                         </div>
                         <app-pagination  [totalRecord]='tsqtotalRecord' [limitpage]='tsqlimitpage' [recordEnd]="tsqrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
@@ -181,11 +182,12 @@
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div>
                             </div>
-                            <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults.response;let i = index">
-                                <div class="col-10 header-title">{{top.query}}</div>
-                                <div class="col-2 header-title text-right">{{top.count}}</div>
+                            <div *ngIf="topQuriesWithNoResults">
+                                <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults.response;let i = index">
+                                    <div class="col-10 header-title">{{top.query}}</div>
+                                    <div class="col-2 header-title text-right">{{top.count}}</div>
+                                </div>
                             </div>
-                            
                         </div>
                         <app-pagination  [totalRecord]='tsqNoRtotalRecord' [limitpage]='tsqNoRlimitpage' [recordEnd]="tsqNoRrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
@@ -307,11 +309,12 @@
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div>
                             </div>
-                            <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries.result;let i = index">
-                                <div class="col-10 body-title pr-3">{{top.query}}</div>
-                                <div class="col-2 body-title text-right">{{top.count}}</div>
+                            <div *ngIf="mostSearchedQuries">
+                                <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries.result;let i = index">
+                                    <div class="col-10 body-title pr-3">{{top.query}}</div>
+                                    <div class="col-2 body-title text-right">{{top.count}}</div>
+                                </div>
                             </div>
-                            
                         </div>
                         <app-pagination  [totalRecord]='tsqPtotalRecord' [limitpage]='tsqPlimitpage' [recordEnd]="tsqPrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
@@ -324,7 +327,7 @@
                         <div class="info-icon" placement="top-right" ngbTooltip="Use key board shortcuts"
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
                         <div class="title-card">Top Search Queries with No Results</div>
-                        <div class="table-content-data">
+                        <div class="table-content-data" *ngIf="topQuriesWithNoResults">
                             <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults.response;let i = index">
                                 <div class="col-10 header-title">{{top.query}}</div>
                                 <div class="col-2 header-title text-right">{{top.count}}</div>
@@ -341,7 +344,7 @@
                         <div class="info-icon" placement="top-right" ngbTooltip="Use key board shortcuts"
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
                         <div class="title-card">Top Search Queries with No Clicks</div>
-                        <div class="table-content-data">
+                        <div class="table-content-data" *ngIf="queriesWithNoClicks">
                             <div class="table_header row m-0" *ngFor="let top of queriesWithNoClicks.result;let i = index">
                                 <div class="col-10 header-title">{{top.query}}</div>
                                 <div class="col-2 header-title text-right">{{top.count}}</div>
